RESOLVED FIXED69449
last frame of a multipart response is not displayed
https://bugs.webkit.org/show_bug.cgi?id=69449
Summary last frame of a multipart response is not displayed
Tony Chang
Reported 2011-10-05 11:50:56 PDT
last frame of a multipart response is not displayed
Attachments
Patch (9.90 KB, patch)
2011-10-05 11:55 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2011-10-05 11:55:15 PDT
Tony Chang
Comment 2 2011-10-05 11:55:42 PDT
Adam Barth
Comment 3 2011-10-06 13:34:12 PDT
Comment on attachment 109832 [details] Patch I don't fully understand multi-part, but I've talked this over with Tony and this change seems to make sense.
WebKit Review Bot
Comment 4 2011-10-06 14:05:48 PDT
Comment on attachment 109832 [details] Patch Clearing flags on attachment: 109832 Committed r96856: <http://trac.webkit.org/changeset/96856>
WebKit Review Bot
Comment 5 2011-10-06 14:05:53 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6 2011-10-07 01:21:52 PDT
This new test fails on the GTK and on the Qt bot: http://build.webkit.org/results/GTK%20Linux%2032-bit%20Release/r96911%20%2818051%29/http/tests/multipart/load-last-non-html-frame-pretty-diff.html It might be similar to https://bugs.webkit.org/show_bug.cgi?id=68979. I think there is a serious problem with multipart tests near Qt and GTK port
Tony Chang
Comment 8 2011-10-07 13:28:19 PDT
Ryosuke Niwa
Comment 9 2011-10-07 13:46:21 PDT
(In reply to comment #8) > (In reply to comment #7) > > The test added by this patch has been crashing on Snow Leopard test bots: > > http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r96941%20(33722)/results.html > > > > http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Fmultipart%2Fload-last-non-html-frame.php&group=%40ToT%20-%20webkit.org&showExpectations=true > > It appears to be passing now. Do we know what changed? Maybe the bots were sick? That's a bug in the flakiness dashboard. nrwt has beeen exiting early due to kling's patch I just rolled out.
Tony Chang
Comment 10 2011-10-07 15:56:56 PDT
Fix for mac crash in bug 69675.
Note You need to log in before you can comment on or make changes to this bug.