last frame of a multipart response is not displayed https://bugs.webkit.org/show_bug.cgi?id=69449

Reviewed by Adam Barth.

Source/WebCore:

Test: http/tests/multipart/load-last-non-html-frame.php

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::maybeFinishLoadingMultipartContent): for non-progressive load pages, commit the load so the
    last frame will be displayed.
* loader/DocumentLoader.h:
* loader/MainResourceLoader.cpp:
(WebCore::MainResourceLoader::didFinishLoading):

LayoutTests:

* http/tests/multipart/load-last-non-html-frame-expected.txt: Added.
* http/tests/multipart/load-last-non-html-frame.php: Added.


Canonical link: https://commits.webkit.org/85614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96856 268f45cc-cd09-0410-ab3c-d52691b4dbfc