third_party/WebKit/LayoutTests/http/tests/multipart/load-last-non-html-frame.php
@@ -1,0 +1,24 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+header('Content-type: multipart/x-mixed-replace;boundary=asdf');
+?>--asdf
+Content-type: text/plain
+
+This test passes if the last multipart frame is displayed.
+FAIL
+
+<?php
+# Add some padding because CFNetwork merges small multipart segments together.
+echo str_pad('', 5000);
+?>
+--asdf
+Content-type: text/plain
+
+This test passes if the last multipart frame is displayed.
+PASS
+<?php
+# Add some padding because CFNetwork merges small multipart segments together.
+echo str_pad('', 5000);
+?>
+
+--asdf--
